--- a/examples/bm_model.ipynb
+++ b/examples/bm_model.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,14 +204,15 @@
     "    \"\"\"\n",
     "    Particle filter approximation of the negative loglikelihood.\n",
     "    \"\"\"\n",
-    "    pf_out = pf.particle_filter(\n",
+    "    pf_out = pf.particle_filter2(\n",
     "        model=bm_model,\n",
     "        key=key,\n",
     "        y_meas=y_meas,\n",
     "        theta=theta,\n",
     "        n_particles=n_particles\n",
     "    )\n",
-    "    return -pf.particle_loglik(pf_out['logw'])"
+    "    return -pf_out[\"loglik\"]\n",
+    "    # return -pf.particle_loglik(pf_out['logw'])"
    ]
   },
   {
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +298,7 @@
        "Text(0.5, 0.98, 'Projection Plots using Closed-Form Latents')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -379,21 +380,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Score Using Cappe/Doucet Method\n",
+    "## Derivatives Using Cappe/Doucet Method\n",
     "\n",
-    "In light of the above, we consider a published estimator now.  This takes gradients first and propagates them using an accumulator."
+    "In light of the above, we consider a published estimator now.  This takes gradients first and propagates them using an accumulator.\n",
+    "\n",
+    "### Check Score Function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  0.19241076  -0.58164037 -14.09202339]\n"
+      "[31.93638243  2.58220017  6.81288909]\n",
+      "[32.86143058  3.01632124  6.15033007]\n"
      ]
     }
    ],
@@ -404,18 +408,91 @@
     "\n",
     "    Needs to be on the original scale because that's the argument signature `particle_filter2()` expects.\n",
     "    \"\"\"\n",
-    "    def alpha(theta):\n",
+    "    def loglik(theta):\n",
     "        return -bm_model.state_lpdf(x_curr=x_curr, x_prev=x_prev, theta=theta) - \\\n",
     "            bm_model.meas_lpdf(y_curr=y_curr, x_curr=x_curr, theta=theta)\n",
-    "    return jax.grad(alpha)(theta)\n",
+    "    return jax.grad(loglik)(theta)\n",
     "\n",
-    "\n",
+    "n_particles = 10000\n",
+    "key, _ = random.split(key)\n",
     "bm_score_pf = jax.jit(lambda theta:\n",
     "                      pf.particle_filter2(model=bm_model, key=key, y_meas=y_meas,\n",
     "                                          theta=theta, n_particles=n_particles,\n",
     "                                          accumulator=accumulate_score)[\"accumulate_out\"])\n",
     "\n",
+    "print(bm_score_exact(theta_true))\n",
     "print(bm_score_pf(theta_true))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looks much better.  The second term $\\frac{\\partial}{\\partial \\sigma} \\ell(\\tth)$ seems a bit worse than the others, would need to investigate more carefully whether this is just random chance... \n",
+    "\n",
+    "### Check Hessian"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 388.11414279 -290.90233168   -5.69229852]\n",
+      " [-290.90233168  166.95330986   -1.47053583]\n",
+      " [  -5.69229852   -1.47053583  169.92209457]]\n",
+      "[[978.76670693 113.7833225  182.15315431]\n",
+      " [113.7833225   85.48597666  33.51941694]\n",
+      " [182.15315431  33.51941694  74.48913917]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def accumulate_hessian(x_prev, x_curr, y_curr, theta):\n",
+    "    \"\"\"\n",
+    "    Accumulator for the hessian function.\n",
+    "\n",
+    "    Needs both the first and second derivatives.\n",
+    "    \"\"\"\n",
+    "    def loglik(theta):\n",
+    "        return bm_model.state_lpdf(x_curr=x_curr, x_prev=x_prev, theta=theta) + \\\n",
+    "            bm_model.meas_lpdf(y_curr=y_curr, x_curr=x_curr, theta=theta)\n",
+    "    alpha = jax.grad(loglik)(theta)\n",
+    "    beta = jax.jacfwd(jax.jacrev(loglik))(theta)\n",
+    "    return {\"alpha\": alpha, \"gamma\": jnp.outer(alpha, alpha) + beta}\n",
+    "\n",
+    "\n",
+    "bm_hessian_exact = jax.jit(jax.jacfwd(jax.jacrev(\n",
+    "    partial(bm_negloglik_exact, y_meas=y_meas))))\n",
+    "\n",
+    "key, _ = random.split(key)\n",
+    "n_particles = 10000\n",
+    "@jax.jit\n",
+    "def bm_hessian_pf(theta):\n",
+    "    accumulate_out = pf.particle_filter2(model=bm_model, key=key, y_meas=y_meas,\n",
+    "                                 theta=theta, n_particles=n_particles,\n",
+    "                                 accumulator=accumulate_hessian)[\"accumulate_out\"]\n",
+    "    score = accumulate_out[\"alpha\"]\n",
+    "    hess = accumulate_out[\"gamma\"]\n",
+    "    return jnp.outer(score, score) - hess\n",
+    "\n",
+    "\n",
+    "print(bm_hessian_exact(theta_true))\n",
+    "print(bm_hessian_pf(theta_true))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This seems quite off:\n",
+    "\n",
+    "- Please check that Doucet's Algorithm 1 is implemented correctly.\n",
+    "- Please check whether it's due to the particle degeneracy issue Doucet pointed out by decreasing `n_obs` to say 10 or 20."
    ]
   },
   {
