--- a/examples/pgnet.ipynb
+++ b/examples/pgnet.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "36af889a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +13,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "37c29bb6",
    "metadata": {
     "scrolled": false
    },
@@ -64,7 +62,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9d23e025",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +77,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6331bffa",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +118,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8b73514c",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +185,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcd51dd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +219,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cb5e2d9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +232,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "937801b0",
    "metadata": {},
    "source": [
     "Check if logweights are constant."
@@ -248,7 +240,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "26d9ea10",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +259,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19a9c7e7",
    "metadata": {},
    "source": [
     "## Plots with Log Weights"
@@ -277,7 +267,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3cef0bf2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +293,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6e2c1c61",
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +332,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d14575f0",
    "metadata": {},
    "source": [
     "## Plots without Log Weights"
@@ -353,7 +340,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a14bbdde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +360,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "633e4026",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +402,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3caef85a",
    "metadata": {},
    "source": [
     "## Experiment with Increase Resolution and Smaller Noise"
@@ -426,7 +410,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c295f3a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +431,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "eb7f6009",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +445,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ef8bb039",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +465,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fec7b322",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +491,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5ee44684",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +531,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -566,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.6.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
