--- a/examples/lotvol.ipynb
+++ b/examples/lotvol.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a5ba3575",
    "metadata": {},
    "source": [
     "## Simulate and Plot Data"
@@ -10,6 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "ffcd4b4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,6 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "57d80aff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,6 +73,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e95b0fe0",
    "metadata": {},
    "source": [
     "Plotting the observations of the state (latent variables) as well as the observations. The latent observations are the smooth lines given below and the observations are the slightly more jagged lines."
@@ -78,6 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "fb91416c",
    "metadata": {},
    "outputs": [
     {
@@ -114,6 +119,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e1d181be",
    "metadata": {},
    "source": [
     "## Parameter Estimation with Complete Data\n",
@@ -128,6 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "7e77338b",
    "metadata": {},
    "outputs": [
     {
@@ -179,6 +186,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "297cc5b9",
    "metadata": {},
    "source": [
     "## Parameter Estimation with Particle Filter"
@@ -187,6 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "d2d7fc50",
    "metadata": {},
    "outputs": [
     {
@@ -241,6 +250,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "06203a85",
    "metadata": {},
    "source": [
     "### Stochastic Optimization\n",
@@ -251,6 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "e09541d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,6 +270,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5c74ad51",
    "metadata": {},
    "source": [
     "It appears like the value of `sigma_h` and `sigma_l` are extremely important in determining the objective function values."
@@ -267,6 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "c1b69192",
    "metadata": {},
    "outputs": [
     {
@@ -499,6 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "cc39e22b",
    "metadata": {},
    "outputs": [
     {
@@ -519,6 +533,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "765caa2a",
    "metadata": {},
    "source": [
     "## High Data Experiment"
@@ -527,6 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
+   "id": "6ac4dd3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,6 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
+   "id": "b914da90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,6 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
+   "id": "eacef0e0",
    "metadata": {},
    "outputs": [
     {
@@ -621,6 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "cd387706",
    "metadata": {},
    "outputs": [
     {
@@ -639,6 +658,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d39916b3",
    "metadata": {},
    "source": [
     "## Scratch"
@@ -647,6 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e7699a7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,6 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "49b54ce6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,6 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fee11f07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,6 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9dfc3270",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,6 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "24bbd411",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -721,7 +746,7 @@
    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -735,7 +760,25 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.13"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
   }
  },
  "nbformat": 4,
