added pgnet model with unobserved DNA

--- a/examples/pf-mvn.ipynb
+++ b/examples/pf-mvn.ipynb
@@ -928,6 +928,8 @@
     "- [ ] Make one `x` variable unobserved. Change measurement model to below. Both proposal and measurement model whether or not DNA is observed or not   \n",
     "```return jnp.exp(x_curr[-1,:-1]) + tau * random.normal(key, (self._n_state[1]-1,))```\n",
     "\n",
+    "- Remove DNA from Y_t, not from X_T\n",
+    "\n",
     "- [ ] Put the latent variables on LotVol on the regular scale, then use the bridge proposal\n",
     "\n",
     "- [ ] Use bridge particle filter instead of bootstrap filter\n",
