--- a/examples/pgnet.ipynb
+++ b/examples/pgnet.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "37c29bb6",
    "metadata": {
     "scrolled": false
@@ -548,6 +548,308 @@
     "    axs[a,b].legend()\n",
     "fig.suptitle('Density plots for observation {}'.format(t_obs), fontsize=24)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbbf315b",
+   "metadata": {},
+   "source": [
+    "## Setting under which PGNET crashes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "58f7a772",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import jax\n",
+    "import jax.numpy as jnp\n",
+    "import jax.scipy as jsp\n",
+    "import jax.random as random\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import pfjax as pf\n",
+    "from pfjax.models.pgnet_model import PGNETModel\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "key = random.PRNGKey(0)\n",
+    "\n",
+    "theta = jnp.array([0.1, 0.7, 0.35, 0.2, 0.1, 0.9, 0.3, 0.1])\n",
+    "_noise = jnp.log(4.) #0.005\n",
+    "tau = jnp.array([1,1,1]) * _noise\n",
+    "\n",
+    "DNA_init = jnp.array([5.])\n",
+    "\n",
+    "theta = jnp.concatenate([theta, tau, DNA_init])\n",
+    "dt = 1\n",
+    "n_res = 1\n",
+    "n_obs = 50 # 50 \n",
+    "\n",
+    "pgnet_dna = PGNETModel(dt, n_res)\n",
+    "\n",
+    "key, subkey = random.split(key)\n",
+    "\n",
+    "x_init = jnp.block([[jnp.zeros((n_res-1, 4))],\n",
+    "                   [jnp.log(jnp.array([8., 8., 8., 5.]))]])\n",
+    "\n",
+    "y_meas, x_state = pf.simulate(pgnet_dna, subkey, n_obs, x_init, theta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7105770c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'drift': DeviceArray([-0.34642912,         nan, -0.89999956,         nan], dtype=float64),\n",
+       " 'diff': DeviceArray([[9.28582462e-02,            nan, 0.00000000e+00,\n",
+       "                          nan],\n",
+       "              [           nan,            inf,           -inf,\n",
+       "                          nan],\n",
+       "              [0.00000000e+00,           -inf, 6.09314649e-08,\n",
+       "                          inf],\n",
+       "              [           nan,            nan,            inf,\n",
+       "                          inf]], dtype=float64)}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\n",
+    "    \"drift\": pgnet_dna.drift(x=x_state[3, 0], theta=theta),\n",
+    "    \"diff\": pgnet_dna.diff(x=x_state[3, 0], theta=theta)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c0639df1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([ 1.93100459e+00,  1.97242832e+08, -2.19573872e+08,\n",
+       "             -1.20952457e+08], dtype=float64)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pgnet_dna._drift(x=jnp.exp(x_state[2,0]), theta=theta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "118dbb49",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([ 2.29954260e-01, -4.68543337e+07, -2.00378878e+00,\n",
+       "             -1.14543133e+07], dtype=float64)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pgnet_dna.drift(x=x_state[2,0], theta=theta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "be510927",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([[[ 2.07944154e+00,  2.07944154e+00,  2.07944154e+00,\n",
+       "                1.60943791e+00]],\n",
+       "\n",
+       "             [[ 2.12218397e+00,  3.62250273e+00,  1.28959925e+00,\n",
+       "                1.64963883e+00]],\n",
+       "\n",
+       "             [[ 1.86266109e+00, -1.80858208e-01,  1.85121595e+01,\n",
+       "                2.40133369e+00]],\n",
+       "\n",
+       "             [[ 1.17270838e+00, -4.68533289e+07,  1.65081561e+01,\n",
+       "               -1.14564031e+07]],\n",
+       "\n",
+       "             [[ 6.41511341e-01,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]],\n",
+       "\n",
+       "             [[            nan,             nan,             nan,\n",
+       "                           nan]]], dtype=float64)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13aa02d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -566,7 +868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
