refactored simulate and loglik_full to accept x_state, y_meas, theta as arbitrary pytrees

--- a/examples/bm_model.ipynb
+++ b/examples/bm_model.ipynb
@@ -744,6 +744,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    def state_lpdf(self, x_curr, x_prev, theta):\n",
+      "        \"\"\"\n",
+      "        Calculates the log-density of `p(x_curr | x_prev, theta)`.\n",
+      "\n",
+      "        Args:\n",
+      "            x_curr: State variable at current time `t`.\n",
+      "            x_prev: State variable at previous time `t-1`.\n",
+      "            theta: Parameter value.\n",
+      "\n",
+      "        Returns:\n",
+      "            The log-density of `p(x_curr | x_prev, theta)`.\n",
+      "        \"\"\"\n",
+      "        mu = theta[0]\n",
+      "        sigma = theta[1]\n",
+      "        return jnp.squeeze(\n",
+      "            jsp.stats.norm.logpdf(x_curr, loc=x_prev + mu * self._dt,\n",
+      "                                  scale=sigma * jnp.sqrt(self._dt))\n",
+      "        )\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pfjax as pf\n",
+    "import pfjax.models\n",
+    "import inspect\n",
+    "\n",
+    "lines = inspect.getsource(pf.models.BMModel.state_lpdf)\n",
+    "print(lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
