--- a/examples/lotvol-mvn.ipynb
+++ b/examples/lotvol-mvn.ipynb
@@ -44,12 +44,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'LotVolModel'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-7ba339537c27>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpfjax\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpfjax\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparticle_filter\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mparticle_filter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparticle_loglik\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresample_multinomial\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresample_mvn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mpfjax\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mproj_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mLotVolModel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpfjax\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msde\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpfjax\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mstoch_opt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mget_sum_lweights\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mget_sum_lweights_mvn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'LotVolModel'"
+     ]
+    }
+   ],
    "source": [
     "import pfjax as pf\n",
-    "from pfjax.particle_filter import particle_filter, particle_loglik, particle_resample_mvn\n",
+    "from pfjax.particle_filter import particle_filter, particle_loglik, resample_multinomial, resample_mvn\n",
     "from pfjax import proj_data, LotVolModel\n",
     "import pfjax.sde\n",
     "from pfjax import stoch_opt, get_sum_lweights, get_sum_lweights_mvn"
@@ -1073,7 +1085,25 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.13"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
   }
  },
  "nbformat": 4,
