--- a/docs/notebooks/internal/stoch_opt_tutorial.ipynb
+++ b/docs/notebooks/internal/stoch_opt_tutorial.ipynb
@@ -326,7 +326,7 @@
    "hash": "40876a2bffcddc7cc0f049994d0bd871c9e82cda63f8a2e51e18ae6452e49d79"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.2 ('new_env': venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -340,9 +340,26 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.13"
   },
-  "orig_nbformat": 4
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
