StoichModel added to experimental and one test done
- Drift of GNet model tested
- Similar test to be done with custom mask

--- a/examples/StoichModel.ipynb
+++ b/examples/StoichModel.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,6 @@
     "X_init = jnp.array([I,G,Ii,Ig,i,g,ri,rg])\n",
     "K1 = Ii + i\n",
     "K2 = Ig + g\n",
-    "\n",
     "tau = jnp.array([0.1,0.1,0.1,0.1,0.1,0.1])\n",
     "param = jnp.array([0.08, 0.82, 0.09, 0.9, 0.25, 0.1, 0.35, 0.3, 0.1, 0.1, 0.12, 0.1])\n",
     "\n",
@@ -297,6 +296,96 @@
     "theta = jnp.concatenate((param, tau, X_init))\n",
     "gnet = StoichModel(1,2,In,Out)\n",
     "gnet_mask = StoichModel(1,2,In,Out,mask)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([[ 1.,  0., -1.,  0.,  1.],\n",
+       "             [ 0.,  1., -1.,  1.,  1.],\n",
+       "             [ 0.,  0.,  1., -2., -1.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "In = jnp.array([[0., 0., 1., 0., 0.],\n",
+    "                [0., 1., 0., 0., 0.],\n",
+    "                [0., 0., 1., 0., 0.],\n",
+    "                [0., 0., 0., 2., 1.]])\n",
+    "\n",
+    "Out = jnp.array([[1., 0., 0., 0., 1.],\n",
+    "                 [0., 1., 0., 0., 0.],\n",
+    "                 [0., 1., 0., 1., 1.],\n",
+    "                 [0., 0., 1., 0., 0.]])\n",
+    "\n",
+    "S_full = Out - In\n",
+    "\n",
+    "gnet = StoichModel(1,2,In,Out)\n",
+    "gnet._StoichMatrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A,B,C = jnp.array([1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([1, 2, 3], dtype=int32)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jnp.array([A,B,C])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Auto-regulatory gene network from Golightly & Wilkinson (2006)\n",
+    "\n",
+    "In = jnp.array([[0., 0., 1., 0., 0.],\n",
+    "                [0., 1., 0., 0., 0.],\n",
+    "                [0., 0., 1., 0., 0.],\n",
+    "                [0., 0., 0., 2., 1.]])\n",
+    "\n",
+    "Out = jnp.array([[1., 0., 0., 0., 1.],\n",
+    "                 [0., 1., 0., 0., 0.],\n",
+    "                 [0., 1., 0., 1., 1.],\n",
+    "                 [0., 0., 1., 0., 0.]])\n",
+    "\n",
+    "tau = jnp.array([0.1,0.1,0.1,0.1,0.1,0.1])\n",
+    "param = jnp.array([0.08, 0.82, 0.09, 0.9, 0.25, 0.1, 0.35, 0.3, 0.1, 0.1, 0.12, 0.1])\n",
+    "\n",
+    "mask = jnp.array([True,  True, False, False, True,  True, True,  True])\n",
+    "\n",
+    "theta = jnp.concatenate((param, tau))\n"
    ]
   },
   {
