started overview documentation

--- a/docs/notebooks/internal/pgnet.ipynb
+++ b/docs/notebooks/internal/pgnet.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "0d894bc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,6 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "4d098d50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,6 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "fae5a276",
    "metadata": {},
    "outputs": [
     {
@@ -119,6 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "0887af75",
    "metadata": {},
    "outputs": [
     {
@@ -186,6 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "80d5b9d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,6 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "d5c85cbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,6 +239,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3ccfc71f",
    "metadata": {},
    "source": [
     "Check if logweights are constant."
@@ -241,6 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "35fa02fc",
    "metadata": {},
    "outputs": [
     {
@@ -260,6 +268,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "47f3dd5d",
    "metadata": {},
    "source": [
     "## Plots with Log Weights"
@@ -268,6 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "2cd38cc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,6 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "fa749d37",
    "metadata": {},
    "outputs": [
     {
@@ -333,6 +344,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "06fc7b3d",
    "metadata": {},
    "source": [
     "## Plots without Log Weights"
@@ -341,6 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "83092415",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,6 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "0a871cdb",
    "metadata": {},
    "outputs": [
     {
@@ -403,6 +417,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1d707a16",
    "metadata": {},
    "source": [
     "## Experiment with Increase Resolution and Smaller Noise"
@@ -411,6 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "4fb23a15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,6 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "d2c70dd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,6 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "56146cbc",
    "metadata": {},
    "outputs": [
     {
@@ -466,6 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "7455458a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,6 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "7c2579f5",
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +854,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
