--- a/docs/notebooks/internal/gradient_comparisons.ipynb
+++ b/docs/notebooks/internal/gradient_comparisons.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simulated Maximum Likelihood with PFJAX\n",
+    "# Comparison of Gradient and Hessian Estimation Algorithms\n",
     "\n",
     "**Martin Lysy -- University of Waterloo**\n",
     "\n",
@@ -160,9 +160,9 @@
     " \n",
     "We will consider two different particle filter algorithms for this problem:\n",
     "\n",
-    "1.  A standard bootstrap particle filter with multinomial resampling \\cite{doucet.johansen09}.  The complexity of this particle filter is $\\bO(NT)$ and the storage cost is $\\bO(N)$.\n",
+    "1.  A standard bootstrap particle filter with multinomial resampling \\cite{doucet_johansen09}.  The complexity of this particle filter is $\\bO(NT)$ and the storage cost is $\\bO(N)$.\n",
     "\n",
-    "2.  A Rao-Blackwellized bootstrap particle filter described by \\cite{poyiadjis.etal11}.  The complexity of this algorithm is $\\bO(N^2T)$ and the storage cost is $\\bO(N)$.\n",
+    "2.  A Rao-Blackwellized bootstrap particle filter described by \\cite{poyiadjis_etal11}.  The complexity of this algorithm is $\\bO(N^2T)$ and the storage cost is $\\bO(N)$.\n",
     "\n",
     "Here we'll content ourselves with a visual assessment using projection plots about the true parameter value.\n",
     " \n",
@@ -400,13 +400,13 @@
     "\n",
     "Here we'll compare three different approximations:\n",
     "\n",
-    "1.  Automatic differentiation through the standard particle filter.  This is know to produce biased results (\\cite{corenflos.etal21}).\n",
+    "1.  Automatic differentiation through the standard particle filter.  This is know to produce biased results (\\cite{corenflos_etal21}).\n",
     "\n",
-    "2.  A modification of the standard particle filter developed by \\cite{cappe.moulines05} of which the bi-product is the score.  This algorithm is unbiased and scales as $\\bO(NT)$, but we have $\\var(\\widehat{\\nabla \\ell}_N(\\tth)) = \\bO{T^2/N}$ (\\cite{{poyiadjis.etal11}).\n",
+    "2.  A modification of the standard particle filter developed by \\cite{cappe_moulines05} of which the bi-product is the score.  This algorithm is unbiased and scales as $\\bO(NT)$, but we have $\\var(\\widehat{\\nabla \\ell}_N(\\tth)) = \\bO{T^2/N}$ (\\cite{poyiadjis_etal11}).\n",
     "\n",
-    "3.  A bi-product of the Rao-Blackwellized particle filter developped by \\cite{poyiadjis.etal11}.\n",
+    "3.  A bi-product of the Rao-Blackwellized particle filter developped by \\cite{poyiadjis_etal11}.\n",
     "\n",
-    "    **Update:** This has a bug somewhere...\n",
+    "    ~~**Update:** This has a bug somewhere...~~\n",
     "\n",
     "For simplicity we'll just check the various approximations at the true value of $\\tth$."
    ]
@@ -787,6 +787,22 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# References\n",
+    "\n",
+    "(<a id=\"cit-doucet_johansen09\" href=\"#call-doucet_johansen09\">Doucet and Johansen, 2009</a>) Arnaud Doucet and Adam M. Johansen, ``_A tutorial on particle filtering and smoothing: Fifteen years later._'',  2009.\n",
+    "\n",
+    "(<a id=\"cit-poyiadjis_etal11\" href=\"#call-poyiadjis_etal11\">Poyiadjis, Doucet <em>et al.</em>, 2011</a>) Poyiadjis G., Doucet A. and Singh S. S., ``_Particle approximations of the score and observed information matrix in state space models with application to parameter estimation_'', Biometrika, vol. 98, number 1, pp. 65--80,  2011.  [online](https://academic.oup.com/biomet/article-lookup/doi/10.1093/biomet/asq062)\n",
+    "\n",
+    "(<a id=\"cit-corenflos_etal21\" href=\"#call-corenflos_etal21\">Corenflos, Thornton <em>et al.</em>, 2021</a>) A. Corenflos, J. Thornton, G. Deligiannidis <em>et al.</em>, ``_Differentiable particle filtering via entropy-regularized optimal transport_'', Proceedings of the 38th international conference on machine learning, July 2021.  [online](https://proceedings.mlr.press/v139/corenflos21a.html)\n",
+    "\n",
+    "(<a id=\"cit-cappe_moulines05\" href=\"#call-cappe_moulines05\">Cappé and Moulines, 2005</a>) O. Cappé and E. Moulines, ``_On the use of particle filtering for maximum likelihood parameter estimation_'', 13th European Signal Processing Conference,  2005.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -815,7 +831,7 @@
    "autoclose": false,
    "autocomplete": false,
    "bibliofile": "biblio.bib",
-   "cite_by": "number",
+   "cite_by": "apalike",
    "current_citInitial": 1,
    "eqLabelWithNumbers": true,
    "eqNumInitial": 1,
