--- a/docs/notebooks/internal/mcmc.ipynb
+++ b/docs/notebooks/internal/mcmc.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d667fe7a",
    "metadata": {},
    "source": [
     "# MCMC in PFJAX\n",
@@ -26,6 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "f4a1724a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,6 +115,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c1f2d5b9",
    "metadata": {},
    "source": [
     "## Tests\n",
@@ -125,6 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "4075672b",
    "metadata": {},
    "outputs": [
     {
@@ -152,6 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "5835d313",
    "metadata": {},
    "outputs": [
     {
@@ -172,6 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "ce79b066",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,6 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "b520ded4",
    "metadata": {},
    "outputs": [
     {
@@ -238,6 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "d2f6d0ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,6 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "643fc974",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,6 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "44056cf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,6 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "f15a24dc",
    "metadata": {},
    "outputs": [
     {
@@ -335,6 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e3e9144c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -342,7 +354,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -356,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
