fixed a few issues with docs

--- a/docs/notebooks/stochopt_tutorial.ipynb
+++ b/docs/notebooks/stochopt_tutorial.ipynb
@@ -386,6 +386,18 @@
    "source": [
     "np.linalg.eigvalsh(theta_ve)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# References\n",
+    "\n",
+    "[<a id=\"cit-corenflos_etal21\" href=\"#call-corenflos_etal21\">1</a>] A. Corenflos, J. Thornton, G. Deligiannidis <em>et al.</em>, ``_Differentiable particle filtering via entropy-regularized optimal transport_'', Proceedings of the 38th international conference on machine learning, July 2021.  [online](https://proceedings.mlr.press/v139/corenflos21a.html)\n",
+    "\n",
+    "[<a id=\"cit-poyiadjis_etal11\" href=\"#call-poyiadjis_etal11\">2</a>] Poyiadjis G., Doucet A. and Singh S. S., ``_Particle approximations of the score and observed information matrix in state space models with application to parameter estimation_'', Biometrika, vol. 98, number 1, pp. 65--80,  2011.  [online](https://academic.oup.com/biomet/article-lookup/doi/10.1093/biomet/asq062)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
