--- a/docs/notebooks/biblio.bib
+++ b/docs/notebooks/biblio.bib
@@ -1,4 +1,4 @@
-@incollection{doucet.johansen09,
+@incollection{doucet_johansen09,
 	address = {Cambridge},
 	title = {A tutorial on particle filtering and smoothing: {Fifteen} years later.},
 	booktitle = {Handbook of {Nonlinear} {Filtering}},
@@ -9,7 +9,7 @@
 }
 
 
-@article{poyiadjis.etal11,
+@article{poyiadjis_etal11,
 	title = {Particle approximations of the score and observed information matrix in state space models with application to parameter estimation},
 	volume = {98},
 	issn = {0006-3444, 1464-3510},
@@ -26,7 +26,7 @@
 }
 
 
-@inproceedings{cappe.moulines05,
+@inproceedings{cappe_moulines05,
 	title = {On the use of particle filtering for maximum likelihood parameter estimation},
 	abstract = {Particle ﬁltering – perhaps more properly named Sequential Monte Carlo – approaches have a strong potential for signal and image processing applications. A problem of great practical signiﬁcance in this ﬁeld, which remains largely unsolved as of today, is the estimation of ﬁxed model parameters based on the output of sequential simulations.},
 	booktitle = {13th European Signal Processing Conference},
@@ -36,7 +36,7 @@
 }
 
 
-@inproceedings{corenflos.etal21,
+@inproceedings{corenflos_etal21,
 	series = {Proceedings of machine learning research},
 	title = {Differentiable particle filtering via entropy-regularized optimal transport},
 	volume = {139},
