--- a/examples/pf-mvn.ipynb
+++ b/examples/pf-mvn.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "2392e0ae",
    "metadata": {},
    "source": [
     "# Particle Filter with Multivariate Normal Resampling\n",
@@ -83,6 +84,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f140a327",
    "metadata": {},
    "source": [
     "# Lotka-Volterra Example"
@@ -91,6 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "87ae78ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,6 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "ad87e716",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,6 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "fe4d59e0",
    "metadata": {},
    "outputs": [
     {
@@ -171,6 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "0cd08566",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,6 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "9d4bef94",
    "metadata": {},
    "outputs": [
     {
@@ -218,6 +225,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "da1f859f",
    "metadata": {},
    "source": [
     "## Log-Likelihood Projection Plots\n",
@@ -228,6 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "2ee1fbb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,6 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "368e48f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,6 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "e4614bf1",
    "metadata": {},
    "outputs": [
     {
@@ -331,6 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
+   "id": "188c6059",
    "metadata": {},
    "outputs": [
     {
@@ -370,6 +382,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ea4cf5cf",
    "metadata": {},
    "source": [
     "## Parameter Inference\n",
@@ -380,6 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "99479776",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,6 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "8c90e191",
    "metadata": {},
    "outputs": [
     {
@@ -456,6 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "9b5eac30",
    "metadata": {},
    "outputs": [
     {
@@ -523,6 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "8b354aee",
    "metadata": {},
    "outputs": [
     {
@@ -549,6 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "465274a2",
    "metadata": {},
    "outputs": [
     {
@@ -582,6 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7c406a58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,6 +615,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ef33b4bc",
    "metadata": {},
    "source": [
     "# Comparison with Multinomial Resampling\n",
@@ -606,6 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
+   "id": "f8fa5735",
    "metadata": {},
    "outputs": [
     {
@@ -669,6 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
+   "id": "3be52a0b",
    "metadata": {},
    "outputs": [
     {
@@ -700,6 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
+   "id": "8f63fe5b",
    "metadata": {},
    "outputs": [
     {
@@ -718,6 +741,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4a69fb65",
    "metadata": {},
    "source": [
     "### Variance Estimates\n",
@@ -728,6 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
+   "id": "873ed7a1",
    "metadata": {},
    "outputs": [
     {
@@ -753,6 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
+   "id": "0c37c3ea",
    "metadata": {},
    "outputs": [
     {
@@ -790,6 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
+   "id": "082e16fa",
    "metadata": {},
    "outputs": [
     {
@@ -826,6 +853,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d6773d2b",
    "metadata": {},
    "source": [
     "## Bridge Proposal - MVN Resampling"
@@ -834,6 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "b632f938",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,6 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "b2a9035a",
    "metadata": {},
    "outputs": [
     {
@@ -905,6 +935,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "356a0b88",
    "metadata": {},
    "source": [
     "## Bridge Proposal - Multinomial Resampling"
@@ -913,6 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "8429d31d",
    "metadata": {},
    "outputs": [
     {
@@ -975,6 +1007,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9194aaff",
    "metadata": {},
    "source": [
     "## TODO\n",
@@ -1008,6 +1041,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "334b6b91",
    "metadata": {},
    "source": [
     "# Particle Behavior\n",
@@ -1039,6 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
+   "id": "5b249160",
    "metadata": {},
    "outputs": [
     {
@@ -1075,6 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "b7c16631",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1093,6 +1129,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "9f70b1cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,6 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "571f09cb",
    "metadata": {},
    "outputs": [
     {
@@ -1151,6 +1189,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "d2b128de",
    "metadata": {},
    "outputs": [
     {
@@ -1172,6 +1211,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9f0f4aa3",
    "metadata": {},
    "source": [
     "## Multinomial Resampling Behavior"
@@ -1180,6 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "73acddbe",
    "metadata": {},
    "outputs": [
     {
@@ -1232,6 +1273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d74ef7ae",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1239,7 +1281,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1253,7 +1295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
