updated gradient_comparisons notebook

--- a/docs/notebooks/stochopt_tutorial.ipynb
+++ b/docs/notebooks/stochopt_tutorial.ipynb
@@ -19,7 +19,9 @@
     "\n",
     "In the [Introduction](pfjax.ipynb) to **PFJAX**, we saw how to set up a model class for a state-space model and how to use a particle filter to estimate its marginal loglikelihood $\\ell(\\tth) = \\log p(\\yy_{0:T} \\mid \\tth)$.  In this tutorial, we'll use **PFJAX** to approximate the maximum likelihood estimator $\\hat \\tth = \\argmax_{\\tth} \\ell(\\tth)$ and its variance $\\var(\\hat \\tth)$.\n",
     "\n",
-    "Once again we'll be working with the Brownian motion with drift model defined in the [Introduction](pfjax.ipynb):\n",
+    "### Benchmark Model\n",
+    "\n",
+    "We'll be using a Bootstrap filter for the Brownian motion with drift model defined in the [Introduction](pfjax.ipynb):\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
