converted tutorials to myst:md format

--- a/docs/notebooks/latexdefs.tex
+++ b/docs/notebooks/latexdefs.tex
@@ -43,6 +43,7 @@
 \newcommand{\UU}{\bm{U}}
 \newcommand{\II}{\bm{I}}
 \newcommand{\eps}{{\bm \epsilon}}
+\newcommand{\bbe}{{\bm \beta}}
 \newcommand{\eet}{{\bm \eta}}
 \newcommand{\lla}{{\bm \lambda}}
 \newcommand{\pph}{{\bm \phi}}
