--- a/docs/notebooks/biblio.bib
+++ b/docs/notebooks/biblio.bib
@@ -1,3 +1,18 @@
+
+@article{malik.pitt11,
+	title = {Particle filters for continuous likelihood evaluation and maximisation},
+	volume = {165},
+	issn = {03044076},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0304407611001473},
+	doi = {10.1016/j.jeconom.2011.07.006},
+	abstract = {In this paper, a method is introduced for approximating the likelihood for the unknown parameters of a state space model. The approximation converges to the true likelihood as the simulation size goes to infinity. In addition, the approximating likelihood is continuous as a function of the unknown parameters under rather general conditions. The approach advocated is fast and robust, and it avoids many of the pitfalls associated with current techniques based upon importance sampling. We assess the performance of the method by considering a linear state space model, comparing the results with the Kalman filter, which delivers the true likelihood. We also apply the method to a non-Gaussian state space model, the stochastic volatility model, finding that the approach is efficient and effective. Applications to continuous time finance models and latent panel data models are considered. Two different multivariate approaches are proposed. The neoclassical growth model is considered as an application.},
+	number = {2},
+	journal = {Journal of Econometrics},
+	author = {Malik, Sheheryar and Pitt, Michael K.},
+	year = {2011},
+	pages = {190--209}
+}
+
 @incollection{doucet.johansen09,
 	address = {Cambridge},
 	title = {A tutorial on particle filtering and smoothing: {Fifteen} years later},
@@ -47,4 +62,19 @@
 	editor = {Meila, Marina and Zhang, Tong},
 	year = {2021},
 	pages = {2100--2111}
+}
+
+
+@article{gordon.etal93,
+	title = {Novel approach to nonlinear/non-{Gaussian} {Bayesian} state estimation},
+	volume = {140},
+	issn = {0956375X},
+	url = {https://digital-library.theiet.org/content/journals/10.1049/ip-f-2.1993.0015},
+	doi = {10.1049/ip-f-2.1993.0015},
+	abstract = {An algorithm, the bootstrap filter, is proposed for implementing recursive Bayesian filters. The required density of the state vector is represented as a set of random samples, which are updated and propagated by the algorithm. The method is not restricted by assumptions of linearity or Gaussian noise: it may be applied to any state transition or measurement model. A simulation example of the bearings only tracking problem is presented. This simulation includes schemes for improving the efficiency of the basic algorithm. For this example, the performance of the bootstrap filter is greatly superior to the standard extended Kalman filter.},
+	number = {2},
+	journal = {IEE Proceedings-F},
+	author = {Gordon, N.J. and Salmond, D.J. and Smith, A.F.M.},
+	year = {1993},
+	pages = {107--113}
 }
