udpated op resampler

--- a/docs/notebooks/internal/optimal-transport-resampling.ipynb
+++ b/docs/notebooks/internal/optimal-transport-resampling.ipynb
@@ -629,11 +629,10 @@
     "#     opt_trans = p_opt(f=sink.f, g=sink.g, x=x_particles, w=prob, eps=pointcloud_kwargs[\"epsilon\"])\n",
     "#     x_particles_new = n_particles * jnp.matmul(opt_trans, x_particles).T\n",
     "\n",
-    "    x_particles_new = lax.cond(neff(prob) <= _thresh, \n",
+    "    x_particles_new = lax.cond(ess(prob) <= _thresh, \n",
     "                               true_fun = lambda x: jnp.reshape(x.T, newshape=p_shape), # resmaple\n",
     "                               false_fun = lambda x: x_particles_prev, # don't resample\n",
     "                               operand = x_particles_new)\n",
-    "    6\n",
     "    return {\n",
     "        \"x_particles\": x_particles_new,\n",
     "        \"geom\": geom,\n",
@@ -651,7 +650,7 @@
     "n_particles_ot = 50\n",
     "\n",
     "\n",
-    "def neff (normalized_weights):\n",
+    "def ess (normalized_weights):\n",
     "    \"\"\" Effective sample size from normalized weights\"\"\"\n",
     "#     return jnp.exp(2 * jax.scipy.special.logsumexp(logw) - jax.scipy.special.logsumexp(2 * logw))\n",
     "    return 1 / sum(normalized_weights ** 2)\n",
