updated TODO list

--- a/docs/notebooks/internal/pfjax_ext.ipynb
+++ b/docs/notebooks/internal/pfjax_ext.ipynb
@@ -62,8 +62,8 @@
    "id": "1a4fff96",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-29T01:51:38.139407Z",
-     "start_time": "2022-11-29T01:51:35.660240Z"
+     "end_time": "2022-11-29T16:07:30.576339Z",
+     "start_time": "2022-11-29T16:07:29.226382Z"
     }
    },
    "outputs": [],
@@ -863,7 +863,8 @@
     "ExecuteTime": {
      "end_time": "2022-11-29T02:59:37.273065Z",
      "start_time": "2022-11-29T02:59:33.720953Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -978,6 +979,19 @@
    "metadata": {},
    "source": [
     "### TODO\n",
+    "\n",
+    "- How to set up a customized proposal\n",
+    "\n",
+    "- Different ways to set up particle filter (init_sample, step_sample, etc. vs pf_step function)\n",
+    "\n",
+    "- For $x_0$: define init_sample/lpdf\n",
+    "\n",
+    "- \n",
+    "\n",
+    "- Just compare the bootstrap PF plot and the ideal proposal plot\n",
+    "\n",
+    "\n",
+    "### TODO(OLD)\n",
     "\n",
     " - Compare different $\\eps$ settings in an overlapped projection plot.\n",
     " \n",
