--- a/docs/notebooks/internal/pfjax_ext.ipynb
+++ b/docs/notebooks/internal/pfjax_ext.ipynb
@@ -1009,6 +1009,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7194d7e9",
+   "metadata": {},
+   "source": [
+    "### TODO\n",
+    "\n",
+    "- Refactor the code to reduce duplication by defining some common external functions, e.g.\n",
+    "\n",
+    "    `bm_{state/meas}_{lpdf/sample}`\n",
+    "    \n",
+    "    `bm_exact_lpdf`\n",
+    "    \n",
+    "    `def class BMModel(dt) ...`\n",
+    "    \n",
+    "    `def state_lpdf(self,) (bm_state_lpdf(...))`\n",
+    "    \n",
+    "    We don't need the state sample functions in the later two customized class if we don't need to draw samples. We don't even need to redefine the exact `lpdf`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "80d32618",
    "metadata": {},
    "source": [
